[project]
name = "accrual-bot"
version = "2.0.0"
description = "Accrual Bot - PO/PR 自動化處理系統"
requires-python = ">=3.11"
dependencies = [
    # 核心資料處理
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",
    "xlsxwriter>=3.1.0",
    "duckdb>=1.4.0",
    # Google API
    "gspread>=6.0.0",
    "google-auth>=2.20.0",
    "google-auth-oauthlib>=0.4.1",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.100.0",
    # UI
    "streamlit>=1.31.0",
    "watchdog>=3.0.0",
    # 通用
    "loguru>=0.7.3",
    "PyYAML>=6.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.8.0",
]

[project.scripts]
accrual-bot = "accrual_bot.cli:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["accrual_bot*"]

[tool.setuptools.package-data]
"accrual_bot.config" = ["*.toml", "*.ini", "*.xlsx", "*.toml.example"]
"accrual_bot.ui._streamlit_app" = ["**/*.py"]

[tool.coverage.run]
source = ["accrual_bot"]
omit = [
    "accrual_bot/ui/pages/*",
    "accrual_bot/ui/components/*",
    "accrual_bot/ui/app.py",
    "accrual_bot/test_data_generator.py",
    "accrual_bot/core/pipeline/steps/spt_*.py",
    "accrual_bot/core/pipeline/steps/spx_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]
show_missing = true
